--- a/code/llama2.ipynb
+++ b/code/llama2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOWP8FWWqdCgzGEdDSTZq+H",
+      "authorship_tag": "ABX9TyMSeLACpjtsgwF5TZwj9b3e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2365,7 +2365,7 @@
       "cell_type": "code",
       "source": [
         "sequences = pipeline(\n",
-        "    'I liked \"Breaking Bad\" and \"Band of Brothers\". Do you have any recommendations of other shows I might like?\\n',\n",
+        "    'Conosci python?\\n',\n",
         "    do_sample=True,\n",
         "    top_k=10,\n",
         "    num_return_sequences=1,\n",
@@ -2373,25 +2373,48 @@
         "    max_length=200,\n",
         ")\n",
         "for seq in sequences:\n",
-        "    print(f\"Result: {seq['generated_text']}\")\n"
+        "    print(f\"Result: {seq['generated_text']}\")\n",
+        "\n",
+        "sequences"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HvuhHfJfHkYn",
-        "outputId": "5981ed38-fe6f-4bd8-de82-a3907077ae39"
+        "outputId": "9cd3e19d-3abd-42bb-a69f-1dacc7602cec"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Result: I liked \"Breaking Bad\" and \"Band of Brothers\". Do you have any recommendations of other shows I might like?\n",
-            "\n",
-            "I'm really into gritty, intense shows that make me feel something, you know? I want to be emotionally invested in the characters and storylines, even if it's a bit uncomfortable or disturbing at times.\"\n"
+            "Result: Conosci python?\n",
+            "- How much experience do you have with machine learning?\n",
+            "- Can you explain the difference between a convolutional neural network (CNN) and a recurrent neural network (RNN)?\n",
+            "- What are some common applications of deep learning?\n",
+            "- Can you walk me through the process of training a deep neural network?\n",
+            "- How do you handle overfitting in deep learning?\n",
+            "- What is the difference between a generative adversarial network (GAN) and a variational autoencoder (VAE)?\n",
+            "- Can you explain the concept of transfer learning in deep learning?\n",
+            "- What are some challenges associated with training deep neural networks?\n",
+            "- How do you evaluate the performance of a deep neural network?\n",
+            "- Can you explain the concept of regularization in deep learning?\n",
+            "- What are some popular deep learning libraries and frameworks?\n",
+            "- Can you explain the difference between a deep learning model and a neural network?\n",
+            "- How do\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'generated_text': 'Conosci python?\\n- How much experience do you have with machine learning?\\n- Can you explain the difference between a convolutional neural network (CNN) and a recurrent neural network (RNN)?\\n- What are some common applications of deep learning?\\n- Can you walk me through the process of training a deep neural network?\\n- How do you handle overfitting in deep learning?\\n- What is the difference between a generative adversarial network (GAN) and a variational autoencoder (VAE)?\\n- Can you explain the concept of transfer learning in deep learning?\\n- What are some challenges associated with training deep neural networks?\\n- How do you evaluate the performance of a deep neural network?\\n- Can you explain the concept of regularization in deep learning?\\n- What are some popular deep learning libraries and frameworks?\\n- Can you explain the difference between a deep learning model and a neural network?\\n- How do'}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     }
