--- a/code/llama2.ipynb
+++ b/code/llama2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMSeLACpjtsgwF5TZwj9b3e",
+      "authorship_tag": "ABX9TyM8C/NY1WFYF7EC0NMvSyWo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2415,6 +2415,58 @@
           },
           "metadata": {},
           "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer(\"In a hole in the ground there lived a hobbit!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4uPaQdTUmQLY",
+        "outputId": "f3daa616-38a1-4eba-b968-e849bb4c1a63"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'input_ids': [1, 512, 263, 16188, 297, 278, 5962, 727, 10600, 263, 298, 711, 2966, 29991], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer(\"In un buco nel terreno lì viveva un hobbit!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xEn9z23_ml2w",
+        "outputId": "143f6ed6-c716-4dbc-a3ee-73ee6f9f3bc0"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'input_ids': [1, 512, 443, 1321, 1111, 2032, 1935, 26155, 301, 30097, 325, 573, 1564, 443, 298, 711, 2966, 29991], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
